end of dayfeat: add Hero entity and refactor unit hierarchy
          - Introduce abstract Creature class (base for Enemy and Hero)
          - Refactor Enemy and Hero to extend Creature
          - Update Cell to store generic Creatures instead of specific Enemies
          - Add Hero spawning logic in RaidController using config spawn points
          - Implement abstract move() and getIcon() methods